Chainguard image + depbumps (#117)
* Update Dockerfile

* Update build.gradle.kts